// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en ProductTitle Debe aparecer el titulo 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`Pruebas en ProductTitle Debe mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Custom Product
  </span>
</div>
`;
